# UmikoBot-3

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: common.hpp  main.cpp  umiko_bot.cpp  umiko_bot.hpp
src/commands/: currency.cpp  general.cpp  general.hpp
tools/: build.bat  build.sh  clean.bat  clean.sh
